# YoutubeMusicSubscriber

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  REFACTOR.md  REVIEW.md  TODO.md  artists.txt  auto_sync.js  auto_sync.py  client-id.txt  client-secret.txt  config.example.json  db  enter  main.py  pyproject.toml  pytest.ini  requirements.txt  run  setup.py  setup.sql  simple_subscribe.py  sqliterc  youtube_music_subscriber.js  yt-subscribe-artists.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md
resources/: demo1.txt
src/: database.rs  main.rs  youtube.rs
tests/: __init__.py  conftest.py  test_integration.py  test_main.py  test_models.py  test_sync.py  test_youtube.py
ytmusic_manager/: __init__.py  cli.py  models.py  sync.py  youtube.py
