[package]
name = "ytmusic-manager"
version = "0.1.0"
edition = "2021"
description = "A professional CLI tool for managing YouTube Music artist subscriptions"
authors = ["Christian <christian@example.com>"]
license = "MIT"

[[bin]]
name = "ytmusic-manager"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
google-youtube3 = "6.0"
yup-oauth2 = "12.0"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = { version = "0.27", features = ["webpki-roots", "http1", "http2", "ring"] }
http-body-util = "0.1"
rustls = { version = "0.23", features = ["ring"] }
async-trait = "0.1"
